# NeuralNetwork

./: CMakeLists.txt  Demo.cpp  Demo.h  README.md  trainingData.txt
